Fixbug word wrap

--- a/modules/weko-theme/weko_theme/static/css/weko_theme/widget.css
+++ b/modules/weko-theme/weko_theme/static/css/weko_theme/widget.css
@@ -97,6 +97,4 @@
   font-size: 20px;
   font-weight: bold;
   margin-bottom: -3px;
-  display:block;
-  word-wrap:break-word;
 }
